# KNLMeansCL

./: .gitignore  CHANGELOG  README.md  hatch_build.py  meson.build  meson_options.txt  pyproject.toml  vcpkg.json
.github/workflows/: build-linux.yml  build-macos.yml  build-windows.yml  ci.yml
KNLMeansCL/: NLMAvisynth.cpp  NLMDefault.h  NLMVapoursynth.cpp  NLMVapoursynth.h
KNLMeansCL/shared/: ocl_utils.cpp  ocl_utils.h
tests/: test_knlmeanscl.py
